--- a/app/views/tareas/index.html.erb
+++ b/app/views/tareas/index.html.erb
@@ -5,6 +5,7 @@
     <tr>
       <th>Hh</th>
       <th>Actividad</th>
+      <th>Proyecto</th>
       <th></th>
       <th></th>
       <th></th>
@@ -16,6 +17,7 @@
       <tr>
         <td><%= tarea.hh %></td>
         <td><%= tarea.actividad %></td>
+        <td><%= tarea.proyecto_id %></td>
         <td><%= link_to 'Show', tarea %></td>
         <td><%= link_to 'Edit', edit_tarea_path(tarea) %></td>
         <td><%= link_to 'Destroy', tarea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
