--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,19 +8,55 @@
 </head>
 <body>
 
-<% if current_user %>
-	logeado como <%= current_user.email %>	
-<%= link_to "salir", session_path("current"), method: :delete %>
-<% else %>
-	<%= link_to 'registro', new_user_path %> or 
-	<%= link_to 'login', new_session_path %> 
-<% end %>
+<nav class="navbar navbar-inverse " role="navigation">
+	<div class="navbar-header">
+		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+			<span class="sr-only">Toggle navigation</span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+			<span class="icon-bar"></span>
+		</button>
+		<%= link_to "Inicio", root_path, class: "navbar-brand" %>
+	</div>
 
-<% flash.each do |name, msg|  %>
-	<%= content_tag :div, msg, id: "flash_#{name}" %>
-<% end %>
+	<div class="collapse navbar-collapse navbar-ex1-collapse">
+		<ul class="nav navbar-nav">
+			<% if  current_user %>
+		</ul>
 
-<%= yield %>
+		<ul class="nav navbar-nav navbar-right">
+			<li>
+			<%= link_to "salir", session_path("current"), method: :delete %>
+			</li>
+		</ul>
+
+			<% else %>
+		</ul>
+		<ul class="nav navbar-nav navbar-right">
+
+				<li>
+					<%= link_to 'login', new_session_path %> 
+				</li>
+		</ul>
+			<% end %>
+		</div>
+	</nav>
+
+  <div class="container"> <!--style="text-align: center"> -->
+	  <% flash.each do |name, msg| %>
+		  <% if msg.is_a?(String) %>
+			  <div class="alert alert-<%= name == :notice ? "success" : "danger" %>">
+				  <a class="close" data-dismiss="alert">&#215;</a>
+				  <%= content_tag :div, msg, :id => "flash_#{name}" %>
+			  </div>
+		  <% end %>
+	  <% end %>
+
+		  <%= yield %>
+  </div>
+
+
+
 
 </body>
 </html>
