--- a/app/views/aaas/new.html.erb
+++ b/app/views/aaas/new.html.erb
@@ -1,9 +1,9 @@
 <div class="page-header">
-  <%= link_to tareas_path, :class => 'btn btn-default' do %>
+  <%= link_to aaas_path, :class => 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Volver
+    Back
   <% end %>
-  <h1>Nueva tarea</h1>
+  <h1>New aaa</h1>
 </div>
 
 <%= render 'form' %>
