--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<nav class="navbar navbar-inverse " role="navigation">
+<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
 	<div class="navbar-header">
 		<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
 			<span class="sr-only">Toggle navigation</span>
@@ -21,12 +21,16 @@
 
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav">
-			<% if  current_user %>
+			<% if current_user %>
+						<li><%= link_to "Tareas", tareas_path %></li>
 		</ul>
 
 		<ul class="nav navbar-nav navbar-right">
 			<li>
-			<%= link_to "salir", session_path("current"), method: :delete %>
+			<%= current_user.email %>
+			</li>
+			<li>
+			<%= link_to "Salir", session_path("current"), method: :delete %>
 			</li>
 		</ul>
 
@@ -35,7 +39,7 @@
 		<ul class="nav navbar-nav navbar-right">
 
 				<li>
-					<%= link_to 'login', new_session_path %> 
+					<%= link_to 'Ingresar', new_session_path %> 
 				</li>
 		</ul>
 			<% end %>
