--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -1,7 +1,8 @@
-<%= form_for(@tarea) do |f| %>
+<%= simple_form_for(@tarea, :html => { :class => "form-horizontal" }) do |f| %>
   <% if @tarea.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@tarea.errors.count, "error") %> prohibited this tarea from being saved:</h2>
+    <div class="alert alert-danger alert-dismissable">
+      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
+      <h4><%= pluralize(@tarea.errors.count, "error") %> prohibited this tarea from being saved:</h4>
 
       <ul>
       <% @tarea.errors.full_messages.each do |msg| %>
@@ -10,20 +11,17 @@
       </ul>
     </div>
   <% end %>
-  <div class="field">
-    <%= f.label :proyecto_id %>
-    <%= collection_select(:tarea, :proyecto_id, Proyecto.all, :id, :nombre) %>   
+  <div class="form-group">
+	  <%= f.association :proyecto, label_method: :nombre, value_method: :id, include_blank: false %>
+	
+</div>
+  <div class="form-group">
+      <%= f.input :hh, :class => "form-control" %>
   </div>
-
-  <div class="field">
-    <%= f.label :hh %><br>
-    <%= f.number_field :hh %>
+  <div class="form-group">
+      <%= f.input :actividad, :class => "form-control" %>
   </div>
-  <div class="field">
-    <%= f.label :actividad %><br>
-    <%= f.text_area :actividad %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+	<div class="form-group">
+      <%= f.submit :class => "btn btn-primary" %>
+	</div>
 <% end %>
