--- a/app/views/tareas/index.html.erb
+++ b/app/views/tareas/index.html.erb
@@ -1,31 +1,31 @@
-<h1>Listing tareas</h1>
+<div class="page-header">
+  <%= link_to new_tarea_path, :class => 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-plus"></span>
+    Nueva Tarea
+  <% end %>
+  <h1>Listing tareas</h1>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Hh</th>
-      <th>Actividad</th>
-      <th>Proyecto</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @tareas.each do |tarea| %>
+<div class="table-responsive">
+  <table class="table table-striped table-bordered table-hover">
+    <thead>
       <tr>
-        <td><%= tarea.hh %></td>
-        <td><%= tarea.actividad %></td>
-        <td><%= tarea.proyecto_id %></td>
-        <td><%= link_to 'Show', tarea %></td>
-        <td><%= link_to 'Edit', edit_tarea_path(tarea) %></td>
-        <td><%= link_to 'Destroy', tarea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <th>Nombre</th>
+            <th>Proyecto</th>
+            <th>HH</th>
+	    <th>Acciones</th>
+	    <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-<%= link_to 'New Tarea', new_tarea_path %>
+    <tbody>
+      <%= content_tag_for(:tr, @tareas) do |tarea| %>
+            <td><%= tarea.actividad %></td>
+            <td><%= tarea.proyecto.nombre %></td>
+            <td><%= tarea.hh %></td>
+            <td><%= link_to 'Detalles', tarea %></td>
+        <td><%= link_to 'Anular', tarea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <% end %>
+    </tbody>
+  </table>
+</div>
