--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
 
 		<ul class="nav navbar-nav navbar-right">
 			<li>
-			<%= current_user.email %>
+			    <%= link_to current_user.email.humanize, edit_user_path(current_user) %>
 			</li>
 			<li>
 			<%= link_to "Salir", session_path("current"), method: :delete %>
