--- a/app/views/proyectos.respaldo/show.html.erb
+++ b/app/views/proyectos.respaldo/show.html.erb
@@ -1,12 +1,17 @@
 <p id="notice"><%= notice %></p>
 
 <p>
+  <strong>Nombre:</strong>
+  <%= @proyecto.nombre %>
+</p>
+
+<p>
   <strong>Hh:</strong>
   <%= @proyecto.hh %>
 </p>
 
 <p>
-  <strong>Actividad:</strong>
+  <strong>Descripcion:</strong>
   <%= @proyecto.descripcion %>
 </p>
 
