--- a/app/views/proyectos/_form.html.erb
+++ b/app/views/proyectos/_form.html.erb
@@ -1,29 +1,8 @@
-<%= form_for(@proyecto) do |f| %>
-  <% if @proyecto.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@proyecto.errors.count, "error") %> prohibited this proyecto from being saved:</h2>
-
-      <ul>
-      <% @proyecto.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :nombre %><br>
-    <%= f.text_field :nombre %>
-  </div>
-  <div class="field">
-    <%= f.label :hh %><br>
-    <%= f.number_field :hh %>
-  </div>
-  <div class="field">
-    <%= f.label :descripcion %><br>
-    <%= f.text_area :descripcion %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+<%= simple_form_for @proyecto do |f| %>
+      <%= f.input :nombre %>
+      <%= f.input :hh %>
+      <%= f.input :fecha_inicio %>
+      <%= f.input :fecha_fin %>
+      <%= f.input :descripcion %><br />
+      <%= f.submit :class => "btn btn-primary" %>
 <% end %>
