--- a/app/views/proyectos/index.html.erb
+++ b/app/views/proyectos/index.html.erb
@@ -1,31 +1,31 @@
-<h1>Listing proyectos</h1>
+<div class="page-header">
+  <%= link_to new_proyecto_path, :class => 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-plus"></span>
+    Nuevo Proyecto 
+  <% end %>
+  <h1>Listing proyectos</h1>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Nombre</th>
-      <th>Hh</th>
-      <th>Descripcion</th>
-      <th></th>
-      <th></th>
-      <th></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @proyectos.each do |proyecto| %>
+<div class="table-responsive">
+  <table class="table table-striped table-bordered table-hover">
+    <thead>
       <tr>
-        <td><%= proyecto.nombre %></td>
-        <td><%= proyecto.hh %></td>
-        <td><%= proyecto.descripcion %></td>
-        <td><%= link_to 'Show', proyecto %></td>
-        <td><%= link_to 'Edit', edit_proyecto_path(proyecto) %></td>
-        <td><%= link_to 'Destroy', proyecto, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <th>Nombre</th>
+            <th>HH</th>
+            <th>Descripcion</th>
+	    <th>Acciones</th>
+	    <th></th>
       </tr>
-    <% end %>
-  </tbody>
-</table>
+    </thead>
 
-<br>
-
-<%= link_to 'New Proyecto', new_proyecto_path %>
+    <tbody>
+      <%= content_tag_for(:tr, @proyectos) do |proyecto| %>
+            <td><%= proyecto.nombre %></td>
+            <td><%= proyecto.hh %></td>
+            <td><%= proyecto.descripcion %></td>
+            <td><%= link_to 'Detalles', proyecto %></td>
+        <td><%= link_to 'Anular', proyecto, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+      <% end %>
+    </tbody>
+  </table>
+</div>
