--- a/app/views/proyectos/new.html.erb
+++ b/app/views/proyectos/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New proyecto</h1>
+<div class="page-header">
+  <%= link_to proyectos_path, :class => 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Volver
+  <% end %>
+  <h1>Nuevo proyecto</h1>
+</div>
 
 <%= render 'form' %>
-
-<%= link_to 'Back', proyectos_path %>
