--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -1,27 +1,9 @@
-<%= simple_form_for(@tarea, :html => { :class => "form-horizontal" }) do |f| %>
-  <% if @tarea.errors.any? %>
-    <div class="alert alert-danger alert-dismissable">
-      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-      <h4><%= pluralize(@tarea.errors.count, "error") %> prohibited this tarea from being saved:</h4>
-
-      <ul>
-      <% @tarea.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
-  <div class="form-group">
-	  <%= f.association :proyecto, label_method: :nombre, value_method: :id, include_blank: false %>
-	
-</div>
-  <div class="form-group">
-      <%= f.input :hh, :class => "form-control" %>
-  </div>
-  <div class="form-group">
-      <%= f.input :actividad, :class => "form-control" %>
-  </div>
-	<div class="form-group">
-      <%= f.submit :class => "btn btn-primary" %>
-	</div>
+<%= simple_form_for @tarea do |f| %>
+	<%= f.association :proyecto, label_method: :nombre, value_method: :id, include_blank: false %>
+	<%= f.input :nombre %>
+	<%= f.input :hh %>
+	<%= f.input :actividad %>
+	<%= f.input :fecha_registro %>
+	<%= f.input :observaciones %><br />
+	<%= f.submit :class => "btn btn-primary" %>
 <% end %>
