--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,9 @@
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav">
 			<% if current_user %>
+						<li><%= link_to "Proyectos", proyectos_path %></li>
 						<li><%= link_to "Tareas", tareas_path %></li>
+						<li><%= link_to "Usuarios", users_path %></li>
 		</ul>
 
 		<ul class="nav navbar-nav navbar-right">
