--- a/app/views/proyectos/_form.html.erb
+++ b/app/views/proyectos/_form.html.erb
@@ -1,4 +1,5 @@
 <%= simple_form_for @proyecto do |f| %>
+      <%= f.association :cliente, label_method: :nombre, value_method: :id, include_blank: false %>
       <%= f.input :nombre %>
       <%= f.input :hh %>
       <%= f.input :fecha_inicio %>
