--- a/app/views/proyectos/index.html.erb
+++ b/app/views/proyectos/index.html.erb
@@ -7,12 +7,11 @@
 </div>
 
 <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
             <th>Nombre</th>
             <th>HH</th>
-            <th>Descripcion</th>
 	    <th>Acciones</th>
 	    <th></th>
       </tr>
@@ -22,9 +21,8 @@
       <%= content_tag_for(:tr, @proyectos) do |proyecto| %>
             <td><%= proyecto.nombre %></td>
             <td><%= proyecto.hh %></td>
-            <td><%= proyecto.descripcion %></td>
-            <td><%= link_to 'Detalles', proyecto %></td>
-        <td><%= link_to 'Anular', proyecto, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	    <td><%= detalles_link proyecto %></td>
+	    <td><%= delete_link proyecto_path(proyecto) %></td>
       <% end %>
     </tbody>
   </table>
