--- a/app/views/tareas/index.html.erb
+++ b/app/views/tareas/index.html.erb
@@ -7,7 +7,7 @@
 </div>
 
 <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
             <th>Nombre</th>
@@ -25,8 +25,8 @@
             <td><%= tarea.proyecto.nombre %></td>
             <td><%= tarea.hh %></td>
             <td><%= tarea.fecha_registro %></td>
-            <td><%= link_to 'Detalles', tarea %></td>
-        <td><%= link_to 'Anular', tarea, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	    <td><%= detalles_link tarea %></td>
+	    <td><%= delete_link tarea_path(tarea) %></td>
       <% end %>
     </tbody>
   </table>
