--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -7,23 +7,22 @@
 </div>
 
 <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
             <th>Email</th>
             <th>Number</th>
             <th></th>
-        <th></th>
-        <th></th>
       </tr>
     </thead>
 
     <tbody>
       <%= content_tag_for(:tr, @users) do |user| %>
-            <td><%= user.email %></td>
-            <td><%= link_to 'Show', user %></td>
-        <td><%= link_to 'Edit', edit_user_path(user) %></td>
-        <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	      <td>
+		      <%= link_to user.email, edit_user_path(user) %>
+	      </td>
+
+	    <td><%= delete_link user_path(user) %></td>
       <% end %>
     </tbody>
   </table>
