--- a/app/views/tareas/index.html.erb
+++ b/app/views/tareas/index.html.erb
@@ -3,7 +3,7 @@
     <span class="glyphicon glyphicon-plus"></span>
     Nueva Tarea
   <% end %>
-  <h1>Listing tareas</h1>
+  <h1>Listado de tareas</h1>
 </div>
 
 <div class="table-responsive">
@@ -21,7 +21,7 @@
 
     <tbody>
       <%= content_tag_for(:tr, @tareas) do |tarea| %>
-            <td><%= tarea.actividad %></td>
+            <td><%= tarea.nombre %></td>
             <td><%= tarea.proyecto.nombre %></td>
             <td><%= tarea.hh %></td>
             <td><%= tarea.fecha_registro %></td>
