--- a/app/views/clientes/_form.html.erb
+++ b/app/views/clientes/_form.html.erb
@@ -1,21 +1,39 @@
-<%= form_for(@cliente, :html => { :class => "form-horizontal" }) do |f| %>
-  <% if @cliente.errors.any? %>
-    <div class="alert alert-danger alert-dismissable">
-      <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
-      <h4><%= pluralize(@cliente.errors.count, "error") %> prohibited this cliente from being saved:</h4>
-
-      <ul>
-      <% @cliente.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= simple_form_for(@cliente, :html => { :class => "form-horizontal" }) do |f| %>
 
   <div class="form-group">
     <%= f.label :nombre, :class => "col-lg-2 control-label" %>
     <div class="col-lg-10">
       <%= f.text_field :nombre, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :rut, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.text_field :rut, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :email, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.text_field :email, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :fecha_registro, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.date_select :fecha_registro, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :direccion, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.text_area :direccion, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :fono, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.text_field :fono, :class => "form-control" %>
     </div>
   </div>
   <div class="form-group">
