--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,7 @@
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 
@@ -22,9 +23,16 @@
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav">
 			<% if current_user %>
-						<li><%= link_to "Proyectos", proyectos_path %></li>
 						<li><%= link_to "Tareas", tareas_path %></li>
+						<li><%= link_to "Proyectos", proyectos_path %></li>
+						<li><%= link_to "Reportes" %></li>
+						<li class="dropdown">
+						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b></a>
+						<ul class="dropdown-menu">
 						<li><%= link_to "Usuarios", users_path %></li>
+						<li><%= link_to "Clientes", clientes_path %></li>
+					</ul>
+					</li>
 		</ul>
 
 		<ul class="nav navbar-nav navbar-right">
