--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
 			<% if current_user %>
 						<li><%= link_to "Tareas", tareas_path %></li>
 						<li><%= link_to "Proyectos", proyectos_path %></li>
-						<li><%= link_to "Reportes" %></li>
+						<li><%= link_to "Reportes", reportes_path  %></li>
 						<li class="dropdown">
 						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b></a>
 						<ul class="dropdown-menu">
