--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,16 +23,20 @@
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav">
 			<% if current_user %>
-						<li><%= link_to "Tareas", tareas_path %></li>
+				<li><%= link_to "Tareas", tareas_path %></li>
+
 						<li><%= link_to "Proyectos", proyectos_path %></li>
-						<li><%= link_to "Reportes", reportes_path  %></li>
-						<li class="dropdown">
-						<a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin<b class="caret"></b></a>
-						<ul class="dropdown-menu">
+				<li><%= link_to "Reportes", reportes_path  %></li>
+
+				<% if current_user.has_role? :admin %>
+					<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Administracion<b class="caret"></b></a>
+					<ul class="dropdown-menu">
 						<li><%= link_to "Usuarios", users_path %></li>
 						<li><%= link_to "Clientes", clientes_path %></li>
 					</ul>
 					</li>
+				<% end %>
 		</ul>
 
 		<ul class="nav navbar-nav navbar-right">
