--- a/app/views/reportes/index.html.erb
+++ b/app/views/reportes/index.html.erb
@@ -1,4 +1,32 @@
-<div class="page-header">
-  <h1>Reportes#index</h1>
+<%= form_tag reportes_path, :method => :get do %>
+	<%= text_field_tag :search, params[:search] %>
+	<%= submit_tag "Buscar", :name => nil %>
+<% end %>
+
+<h1>Listado de tareas</h1>
+
+
+<div class="table-responsive">
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+            <th>Desarrollador</th>
+            <th>Proyecto</th>
+            <th>HH</th>
+            <th>Fecha</th>
+	    <th>Acciones</th>
+	    <th></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <%= content_tag_for(:tr, @tareas) do |tarea| %>
+            <td><%= tarea.user.email %></td>
+            <td><%= tarea.proyecto.nombre %></td>
+            <td><%= tarea.hh %></td>
+            <td><%= tarea.fecha_registro %></td>
+	    <td><%= detalles_link tarea %></td>
+      <% end %>
+    </tbody>
+  </table>
 </div>
-<p>Find me in app/views/reportes/index.html.erb</p>
