--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,1 +1,10 @@
+<div class="page-header">
+  <%= link_to users_path, :class => 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Volver 
+  <% end %>
+  <h1>Nuevo Usuario</h1>
+</div>
+
 <%= render 'form' %>
+
