--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user) do |f| %>
+<%= simple_form_for(@user, :html => { :class => "form-horizontal" }) do |f| %>
   <% if @user.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@user.errors.count, "error") %> prohibited this user from being saved:</h2>
@@ -11,29 +11,62 @@
     </div>
   <% end %>
 
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
-  </div>
-  <div class="field">
-    <%= f.label :password %><br>
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation%><br>
-    <%= f.password_field :password_confirmation%>
-  </div>
-  <div class="field">
-  <% if current_user.has_role? :admin %>
-	  <% for role in Role.find(:all) %>
-    <div>
-      <%= check_box_tag "user[role_ids][]", role.id, @user.roles.include?(role) %>
-      <%= role.name %>
+  <div class="form-group">
+    <%= f.label :usuario, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.text_field :usuario, :class => "form-control" %>
     </div>
-  <% end %>
-  <% end %>
   </div>
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.label :email, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.text_field :email, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :nombre, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.text_field :nombre, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :apellido, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.text_field :apellido, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :password, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.password_field :password, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :password_confirmation, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.password_field :password_confirmation, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+	  <% if current_user.has_role? :admin %>
+  <div class="form-group">
+    <%= f.label "Permisos", :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+    </div>
+  </div>
+		  <% for role in Role.find(:all) %>
+				  <div class="col-lg-2 control-label">
+				  </div>
+    <div class="col-lg-10">
+					  <%= check_box_tag "user[role_ids][]", role.id, @user.roles.include?(role) %>
+					  <%= role.name %>
+				  </div>
+			  <% end %>
+		  <% end %>
+	  </div>
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <%= f.submit :class => "btn btn-primary" %>
+    </div>
   </div>
 <% end %>
