--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,9 +1,20 @@
+<% if current_user.has_role? :admin %>
 <div class="page-header">
   <%= link_to users_path, :class => 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+   Volver 
   <% end %>
-  <h1>Editing user</h1>
+  <h1>Editar usuario</h1>
 </div>
 
+<% else %>
+<div class="page-header">
+  <%= link_to tareas_path, :class => 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+   Volver 
+  <% end %>
+  <h1>Editar usuario</h1>
+</div>
+
+<% end  %>
 <%= render 'form' %>
