--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -3,15 +3,15 @@
     <span class="glyphicon glyphicon-plus"></span>
     Nuevo Usuario
   <% end %>
-  <h1>Listing users</h1>
+  <h1>Listado Usuarios</h1>
 </div>
 
 <div class="table-responsive">
   <table class="table table-striped table-hover">
     <thead>
       <tr>
-            <th>Email</th>
-            <th>Number</th>
+            <th>Usuario</th>
+            <th>Acciones</th>
             <th></th>
       </tr>
     </thead>
@@ -19,7 +19,7 @@
     <tbody>
       <%= content_tag_for(:tr, @users) do |user| %>
 	      <td>
-		      <%= link_to user.email, edit_user_path(user) %>
+		      <%= link_to user.usuario, edit_user_path(user) %>
 	      </td>
 
 	    <td><%= delete_link user_path(user) %></td>
