--- a/app/views/ccccs/new.html.erb
+++ b/app/views/ccccs/new.html.erb
@@ -1,10 +1,9 @@
 <div class="page-header">
-  <%= link_to proyectos_path, :class => 'btn btn-default' do %>
+  <%= link_to ccccs_path, :class => 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Volver 
+    Back
   <% end %>
-  <h1>Editar proyecto</h1>
+  <h1>New cccc</h1>
 </div>
 
 <%= render 'form' %>
-
