--- a/app/views/clientes/new.html.erb
+++ b/app/views/clientes/new.html.erb
@@ -3,7 +3,7 @@
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
-  <h1>New cliente</h1>
+  <h1>Nuevo cliente</h1>
 </div>
 
 <%= render 'form' %>
