--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -13,14 +13,23 @@
             <th>Usuario</th>
             <th>Acciones</th>
             <th></th>
+            <th></th>
+            <th></th>
       </tr>
     </thead>
 
     <tbody>
       <%= content_tag_for(:tr, @users) do |user| %>
 	      <td>
-		      <%= link_to user.usuario, edit_user_path(user) %>
+		      <%# #link_to user.usuario, edit_user_path(user) %>
+		      <%= user.usuario %> 
 	      </td>
+	      <td>
+		      <%= link_to "Editar", edit_user_path(user), class: "btn btn-primary btn-sm" %>
+      		</td>
+	      <td>
+		      <%= link_to "Deshabilitar",{}  , class: "btn btn-success btn-sm" %>
+      		</td>
 
 	    <td><%= delete_link user_path(user) %></td>
       <% end %>
