--- a/app/views/proyectos/_tareas.html.erb
+++ b/app/views/proyectos/_tareas.html.erb
@@ -1,36 +1,34 @@
-
 <div class="page-header">
-  <%= link_to new_tarea_path, :class => 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-plus"></span>
-    Nueva Tarea
+  <%= link_to proyectos_path, :class => 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Volver 
   <% end %>
-  <h1>Listado de tareas</h1>
+  <h1>Tareas del proyecto</h1>
 </div>
 
 <div class="table-responsive">
   <table class="table table-striped table-hover">
     <thead>
       <tr>
+            <th>Desarrollador</th>
             <th>Nombre</th>
-            <th>Proyecto</th>
-            <th>HH</th>
+            <th>HH dedicadas</th>
             <th>Fecha</th>
 	    <th>Acciones</th>
-	    <th></th>
 	    <th></th>
       </tr>
     </thead>
 
     <tbody>
-      <%= content_tag_for(:tr, @tareas) do |tarea| %>
+      <%= content_tag_for(:tr, @proyecto.tareas) do |tarea| %>
+            <td><%= tarea.user.usuario %></td>
             <td><%= tarea.nombre %></td>
-            <td><%= tarea.proyecto.nombre %></td>
             <td><%= tarea.hh %></td>
             <td><%= tarea.fecha_registro %></td>
-	    <td><%= link_to "Copiar", class: "btn btn-primary btn-sm" %> </td>
 	    <td><%= detalles_link tarea %></td>
-	    <td><%= delete_link tarea_path(tarea) %></td>
       <% end %>
     </tbody>
   </table>
 </div>
+
+
