--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -1,9 +1,55 @@
-<%= simple_form_for @tarea do |f| %>
-	<%= f.association :proyecto, label_method: :nombre, value_method: :id, include_blank: false %>
-	<%= f.input :nombre %>
-	<%= f.input :hh %>
-	<%= f.input :actividad %>
-	<%= f.input :fecha_registro %>
-	<%= f.input :observaciones %><br />
-	<%= f.submit :class => "btn btn-primary" %>
-<% end %>
+<%= simple_form_for(@tarea, :html => { :class => "form-horizontal" }) do |f| %>
+  <% if @tarea.errors.any? %>
+    <div id="error_explanation">
+      <h2><%= pluralize(@tarea.errors.count, "error") %> prohibited this user from being saved:</h2>
+
+      <ul>
+      <% @tarea.errors.full_messages.each do |msg| %>
+        <li><%= msg %></li>
+      <% end %>
+      </ul>
+    </div>
+  <% end %>
+  <div class="form-group">
+    <%= f.label :proyecto, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+    <%= collection_select(:tarea, :proyecto_id, Proyecto.all, :id, :nombre, { },{:class => 'form-control'}) %>   
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :nombre, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.text_field :nombre, :class => "form-control" %>
+    </div>
+  </div>
+
+  <div class="form-group">
+    <%= f.label :hh, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.text_field :hh, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :actividad, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.text_area :actividad, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :fecha_registro, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.date_select :fecha_registro, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <%= f.label :observaciones, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+      <%= f.text_area :observaciones, :class => "form-control" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-lg-offset-2 col-lg-10">
+      <%= f.submit :class => "btn btn-primary" %>
+    </div>
+  </div>
+<% end  %>
