--- a/app/views/tareas/show.html.erb
+++ b/app/views/tareas/show.html.erb
@@ -1,14 +1,27 @@
-<p id="notice"><%= notice %></p>
+<div class="page-header">
+  <%= link_to tareas_path, :class => 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Volver 
+  <% end %>
+  <h1>Detalles de la tarea</h1>
+</div>
 
-<p>
-  <strong>Hh:</strong>
-  <%= @tarea.hh %>
-</p>
+<dl class="dl-horizontal">
+  <dt>Proyecto:</dt>
+  <dd><%= @tarea.proyecto.nombre.humanize %></dd>
 
-<p>
-  <strong>Actividad:</strong>
-  <%= @tarea.actividad %>
-</p>
+  <dt>Nombre:</dt>
+  <dd><%= @tarea.nombre %></dd>
 
-<%= link_to 'Edit', edit_tarea_path(@tarea) %> |
-<%= link_to 'Back', tareas_path %>
+  <dt>HH:</dt>
+  <dd><%= @tarea.hh %></dd>
+
+  <dt>Actividad:</dt>
+  <dd><%= @tarea.actividad %></dd>
+
+  <dt>Fecha Inicio:</dt>
+  <dd><%= @tarea.fecha_registro %></dd>
+
+  <dt>Observaciones:</dt>
+  <dd><%= @tarea.observaciones %></dd>
+</dl>
