--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,11 +24,18 @@
 		<ul class="nav navbar-nav">
 			<% if current_user %>
 				<li><%= link_to "Tareas", tareas_path %></li>
-
-						<li><%= link_to "Proyectos", proyectos_path %></li>
-				<li><%= link_to "Reportes", reportes_path  %></li>
+				<li><%= link_to "Proyectos", proyectos_path %></li>
 
 				<% if current_user.has_role? :admin %>
+
+					<li class="dropdown">
+					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Reportes<b class="caret"></b></a>
+					<ul class="dropdown-menu">
+						<li><%= link_to "Listado1", reportes_path  %></li>
+						<li><%= link_to "Reporte1", reportes1_path  %></li>
+					</ul>
+					</li>
+
 					<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Administracion<b class="caret"></b></a>
 					<ul class="dropdown-menu">
