--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -11,6 +11,7 @@
     <thead>
       <tr>
             <th>Nombre</th>
+            <th>Detalles</th>
             <th>Acciones</th>
       </tr>
     </thead>
@@ -18,6 +19,7 @@
     <tbody>
       <%= content_tag_for(:tr, @clientes) do |cliente| %>
 	      <td><%= cliente.nombre.humanize %></td>
+              <td><%= link_to 'Lugares', cliente_lugares_path(cliente), class: "btn btn-success btn-sm" %></td>
 	      <td><%= link_to "Editar", edit_cliente_path(cliente), class: "btn btn-primary btn-sm" %></td>
               <td><%= delete_link cliente_path(cliente) %></td>
       <% end %>
