--- a/app/views/tareas/show.html.erb
+++ b/app/views/tareas/show.html.erb
@@ -19,7 +19,7 @@
   <dt>Actividad:</dt>
   <dd><%= @tarea.actividad %></dd>
 
-  <dt>Fecha Inicio:</dt>
+  <dt>Fecha Registro:</dt>
   <dd><%= @tarea.fecha_registro %></dd>
 
   <dt>Observaciones:</dt>
