--- a/app/views/reportes1/index.html.erb
+++ b/app/views/reportes1/index.html.erb
@@ -1,1 +1,1 @@
-<%= content_tag :div, "", id: "hhp_vs_hhu", data: { proyectos: @proyectos } %>
+<%= content_tag :div, "", id: "hh_d", data: { tareas: @tareas } %>
