--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -1,55 +1,25 @@
-<%= simple_form_for(@tarea, :html => { :class => "form-horizontal" }) do |f| %>
-  <% if @tarea.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@tarea.errors.count, "error") %> prohibited this user from being saved:</h2>
-
-      <ul>
-      <% @tarea.errors.full_messages.each do |msg| %>
-        <li><%= msg %></li>
-      <% end %>
-      </ul>
-    </div>
-  <% end %>
+<%= simple_form_for @tarea do |f| %>
+    <%= f.error_notification %>
   <div class="form-group">
-    <%= f.label :proyecto, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-	    <%= f.collection_select :proyecto_id, Proyecto.order(:nombre), :id, :nombre,{}, class: "form-control" %>   
-    </div>
+	  <%= f.association :proyecto, label_method: :nombre, include_blank: false, collection: Proyecto.all(order: 'nombre') %>
   </div>
   <div class="form-group">
-    <%= f.label :nombre, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-      <%= f.text_field :nombre, :class => "form-control" %>
-    </div>
-  </div>
-
-  <div class="form-group">
-    <%= f.label :hh, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-      <%= f.text_field :hh, :class => "form-control" %>
-    </div>
+	  <%= f.input :nombre %>
   </div>
   <div class="form-group">
-    <%= f.label :actividad, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-      <%= f.text_area :actividad, :class => "form-control" %>
-    </div>
+	  <%= f.input :hh %>
   </div>
   <div class="form-group">
-    <%= f.label :fecha_registro, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-      <%= f.date_select :fecha_registro, :class => "form-control" %>
-    </div>
+	  <%= f.input :actividad %>
   </div>
   <div class="form-group">
-    <%= f.label :observaciones, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-      <%= f.text_area :observaciones, :class => "form-control" %>
-    </div>
+	  <!--%= f.input :fecha_registro, :input_html => { data: {behaviour: "datepicker1"}}, :as => :string %-->
+	  <%= f.input :fecha_registro %>
   </div>
   <div class="form-group">
-    <div class="col-lg-offset-2 col-lg-10">
-      <%= f.submit :class => "btn btn-primary" %>
-    </div>
+	  <%= f.input :observaciones %>
+  </div>
+  <div class="form-group">
+      <%= f.button :submit ,:class => "btn btn-primary" %>
   </div>
 <% end  %>
