--- a/app/views/tareas/show.html.erb
+++ b/app/views/tareas/show.html.erb
@@ -10,6 +10,18 @@
   <dt>Proyecto:</dt>
   <dd><%= @tarea.proyecto.nombre.humanize %></dd>
 
+  <dt>Modulo:</dt>
+  <dd><%= @tarea.modulo.nombre.humanize %></dd>
+
+  <dt>Planta:</dt>
+  <dd><%= @tarea.lugar.nombre.humanize %></dd>
+
+  <dt>Responsable Planta:</dt>
+  <dd><%= @tarea.responsable_planta_id %></dd>
+
+  <dt>Responsable Sistema:</dt>
+  <dd><%= @tarea.responsable_sistema_id %></dd>
+
   <dt>Nombre:</dt>
   <dd><%= @tarea.nombre %></dd>
 
