--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -17,21 +17,27 @@
     </div>
   </div>
   <div class="form-group">
+    <%= f.label :Modulo, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+	    <%= f.collection_select :modulo_id, Modulo.order(:nombre), :id, :nombre,{}, class: "form-control" %>   
+    </div>
+  </div>
+  <div class="form-group">
     <%= f.label "Planta", :class => "col-lg-2 control-label" %>
     <div class="col-lg-10">
-	    <%= collection_select(:tarea, :lugar_id, Lugar.all, :id, :nombre,{}) %>
+	    <%= f.collection_select :lugar_id, Lugar.order(:nombre), :id, :nombre,{}, class: "form-control" %>   
     </div>
   </div>
   <div class="form-group">
     <%= f.label "Responsable Sistema", :class => "col-lg-2 control-label" %>
     <div class="col-lg-10">
-	    <%= collection_select(:tarea, :responsable_sistema, Responsable.all, :id, :nombre,{}) %>
+	    <%= collection_select(:tarea, :responsable_sistema_id, Responsable.all, :id, :nombre,{}) %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label "Responsable Planta", :class => "col-lg-2 control-label" %>
     <div class="col-lg-10">
-	    <%= collection_select(:tarea, :responsable_planta, Responsable.all, :id, :nombre,{}) %>
+	    <%= collection_select(:tarea, :responsable_planta_id, Responsable.all, :id, :nombre,{}) %>
     </div>
   </div>
   <div class="form-group">
