--- a/app/views/reportes/index.html.erb
+++ b/app/views/reportes/index.html.erb
@@ -1,14 +1,24 @@
 <h1>Listado de tareas</h1>
 
+<%= form_tag reportes_path, method: 'get' do %>
+	<p>
+		<%= text_field_tag :search, params[:search] %>
+		<%= submit_tag "Buscar", name: nil %>
+		</p>
+	<% end %>
+	<p>
+	  Download:
+	  <%= link_to "Excel", reportes_path(format: "xls") %> 
+	  </p>
 
 <div class="table-responsive">
   <table class="table table-striped table-hover">
     <thead>
       <tr>
-            <th>Desarrollador</th>
-            <th>Proyecto</th>
-            <th>HH</th>
-            <th>Fecha</th>
+            <th><%= ordenable "user_id", "Desarrollador" %></th>
+            <th><%= ordenable "proyecto_id", "Proyecto" %></th>
+            <th><%= ordenable "hh", "HH" %></th>
+            <th><%= ordenable "fecha_registro", "Fecha Registro" %></th>
 	    <th>Acciones</th>
 	    <th></th>
       </tr>
@@ -25,3 +35,4 @@
     </tbody>
   </table>
 </div>
+<%= will_paginate @tareas %>
