--- a/app/views/tareas/show.html.erb
+++ b/app/views/tareas/show.html.erb
@@ -7,6 +7,9 @@
 </div>
 
 <dl class="dl-horizontal">
+  <dt>Nombre:</dt>
+  <dd><%= @tarea.nombre.humanize %></dd>
+
   <dt>Proyecto:</dt>
   <dd><%= @tarea.proyecto.nombre.humanize %></dd>
 
