nested responsables ok

--- a/app/views/clientes/index.html.erb
+++ b/app/views/clientes/index.html.erb
@@ -3,7 +3,7 @@
     <span class="glyphicon glyphicon-plus"></span>
     Nuevo Cliente
   <% end %>
-  <h1>Listado clientes</h1>
+  <h4>Listado Clientes</h4>
 </div>
 
 <div class="table-responsive">
@@ -11,7 +11,7 @@
     <thead>
       <tr>
             <th>Nombre</th>
-            <th>Detalles</th>
+            <th>Lugares</th>
             <th>Acciones</th>
       </tr>
     </thead>
