--- a/app/views/responsables/new.html.erb
+++ b/app/views/responsables/new.html.erb
@@ -1,9 +1,9 @@
 <div class="page-header">
-  <%= link_to responsables_path, :class => 'btn btn-default' do %>
+  <%= link_to cliente_lugar_responsables_path, :class => 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+    Volver
   <% end %>
-  <h1>New responsable</h1>
+  <h4>Nuevo Responsable</h4>
 </div>
 
 <%= render 'form' %>
