--- a/app/views/clientes/new.html.erb
+++ b/app/views/clientes/new.html.erb
@@ -1,9 +1,9 @@
 <div class="page-header">
   <%= link_to clientes_path, :class => 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+   Volver 
   <% end %>
-  <h1>Nuevo cliente</h1>
+  <h4>Nuevo cliente</h4>
 </div>
 
 <%= render 'form' %>
