--- a/app/views/lugares/edit.html.erb
+++ b/app/views/lugares/edit.html.erb
@@ -1,13 +1,10 @@
 <div class="page-header">
-  <%= link_to lugares_path, :class => 'btn btn-default' do %>
+  <%= link_to cliente_lugares_path, :class => 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+    Volver
   <% end %>
-  <%= link_to @lugar, :class => 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-info-sign"></span>
-    Show
-  <% end %>
-  <h1>Editing lugar</h1>
+  <!--%= link_to [@cliente,@lugar], :class => 'btn btn-primary' do %-->
+  <h4>Editar lugar</h4>
 </div>
 
 <%= render 'form' %>
