--- a/app/views/lugares/index.html.erb
+++ b/app/views/lugares/index.html.erb
@@ -1,21 +1,22 @@
 <div class="page-header">
+  <%= link_to clientes_path, :class => 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Volver
+  <% end %>
   <%= link_to new_cliente_lugar_path, :class => 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-plus"></span>
-    New Lugar
+    Nuevo Lugar
   <% end %>
-  <h1>Listing lugares</h1>
+  <%= content_tag :h4, "Listado Lugares" + " -> " + @cliente.nombre.humanize %>
 </div>
 
 <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
             <th>Nombre</th>
-            <th>Ciudad</th>
-            <th>Area</th>
-            <th>Planta</th>
-            <th>Cliente</th>
-            <th></th>
+            <th>Lugares</th>
+        <th>Acciones</th>
         <th></th>
         <th></th>
       </tr>
@@ -24,13 +25,9 @@
     <tbody>
       <%= content_tag_for(:tr, @lugares) do |lugar| %>
             <td><%= lugar.nombre %></td>
-            <td><%= lugar.ciudad %></td>
-            <td><%= lugar.area %></td>
-            <td><%= lugar.planta %></td>
-            <td><%= lugar.cliente.nombre %></td>
-            <td><%= link_to 'Show', [@cliente,lugar] %></td>
-        <td><%= link_to 'Edit', edit_cliente_lugar_path(@cliente,lugar) %></td>
-        <td><%= link_to 'Destroy', [@cliente,lugar], method: :delete, data: { confirm: 'Are you sure?' } %></td>
+	    <td><%= link_to 'Responsables', cliente_lugar_responsables_path(@cliente,lugar),  class: "btn btn-success btn-sm" %></td>
+	    <td><%= link_to 'Editar', edit_cliente_lugar_path(@cliente,lugar) , class: "btn btn-primary btn-sm" %></td>
+	    <td><%= delete_link cliente_lugar_path(@cliente,lugar) %></td>
       <% end %>
     </tbody>
   </table>
