--- a/app/views/lugares/new.html.erb
+++ b/app/views/lugares/new.html.erb
@@ -1,9 +1,9 @@
 <div class="page-header">
   <%= link_to cliente_lugares_path, :class => 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+    Volver
   <% end %>
-  <h1>New lugar</h1>
+  <h4>Nuevo Lugar</h4>
 </div>
 
 <%= render 'form' %>
