--- a/app/views/modulos/_form.html.erb
+++ b/app/views/modulos/_form.html.erb
@@ -11,6 +11,12 @@
       </ul>
     </div>
   <% end %>
+  <div class="form-group">
+    <%= f.label :cliente, :class => "col-lg-2 control-label" %>
+    <div class="col-lg-10">
+    <%= collection_select(:proyecto, :cliente_id, Cliente.all, :id, :nombre, { },{:class => 'form-control'}) %>   
+    </div>
+  </div>
 
   <div class="form-group">
     <%= f.label :nombre, :class => "col-lg-2 control-label" %>
@@ -22,12 +28,6 @@
     <%= f.label :descripcion, :class => "col-lg-2 control-label" %>
     <div class="col-lg-10">
       <%= f.text_area :descripcion, :class => "form-control" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :Proyecto, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-    <%= collection_select(:modulo, :proyecto_id, Proyecto.all, :id, :nombre, { },{:class => 'form-control'}) %>   
     </div>
   </div>
   <div class="form-group">
