--- a/app/views/responsables/_form.html.erb
+++ b/app/views/responsables/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@responsable, :html => { :class => "form-horizontal" }) do |f| %>
+<%= form_for([@cliente,@lugar,@responsable], :html => { :class => "form-horizontal" }) do |f| %>
   <% if @responsable.errors.any? %>
     <div class="alert alert-danger alert-dismissable">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
@@ -28,12 +28,6 @@
     <%= f.label :fono, :class => "col-lg-2 control-label" %>
     <div class="col-lg-10">
       <%= f.number_field :fono, :class => "form-control" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <%= f.label :lugar, :class => "col-lg-2 control-label" %>
-    <div class="col-lg-10">
-	    <%= collection_select(:responsable, :lugar_id, Lugar.all, :id, :nombre, { },{:class => 'form-control'}) %>   
     </div>
   </div>
   <div class="form-group">
