--- a/app/views/responsables/edit.html.erb
+++ b/app/views/responsables/edit.html.erb
@@ -1,13 +1,10 @@
 <div class="page-header">
-  <%= link_to responsables_path, :class => 'btn btn-default' do %>
+  <%= link_to cliente_lugar_responsables_path, :class => 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+    Volver
   <% end %>
-  <%= link_to @responsable, :class => 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-info-sign"></span>
-    Show
-  <% end %>
-  <h1>Editing responsable</h1>
+  <h4>Editar responsable</h4>
 </div>
 
 <%= render 'form' %>
+
