--- a/app/views/responsables/index.html.erb
+++ b/app/views/responsables/index.html.erb
@@ -1,20 +1,22 @@
 <div class="page-header">
-  <%= link_to new_responsable_path, :class => 'btn btn-primary' do %>
-    <span class="glyphicon glyphicon-plus"></span>
-    New Responsable
+  <%= link_to cliente_lugares_path, :class => 'btn btn-default' do %>
+    <span class="glyphicon glyphicon-list-alt"></span>
+    Volver
   <% end %>
-  <h1>Listing responsables</h1>
+  <%= link_to new_cliente_lugar_responsable_path, :class => 'btn btn-primary' do %>
+    <span class="glyphicon glyphicon-plus"></span>
+    Nuevo Responsable
+  <% end %>
+  <%= content_tag :h4, "Listado Personal" + " -> " + @cliente.nombre.humanize + " -> " + @lugar.nombre.humanize %>
 </div>
 
 <div class="table-responsive">
-  <table class="table table-striped table-bordered table-hover">
+  <table class="table table-striped table-hover">
     <thead>
       <tr>
             <th>Nombre</th>
-            <th>Email</th>
-            <th>Fono</th>
-            <th>Lugar</th>
             <th></th>
+        <th></th>
         <th></th>
         <th></th>
       </tr>
@@ -23,12 +25,10 @@
     <tbody>
       <%= content_tag_for(:tr, @responsables) do |responsable| %>
             <td><%= responsable.nombre %></td>
-            <td><%= responsable.email %></td>
-            <td><%= responsable.fono %></td>
-            <td><%= responsable.lugar %></td>
-            <td><%= link_to 'Show', responsable %></td>
-        <td><%= link_to 'Edit', edit_responsable_path(responsable) %></td>
-        <td><%= link_to 'Destroy', responsable, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+            <!--td><%# link_to 'Detalles', [@cliente,@lugar, responsable] %></td-->
+        <td><%= link_to 'Editar', edit_cliente_lugar_responsable_path(@cliente ,@lugar, responsable), class: "btn btn-primary btn-sm" %></td>
+        <td><!--%= link_to 'Anular', [@cliente, @lugar, responsable], method: :delete, data: { confirm: 'Are you sure?' } %--></td>
+	    <td><%= delete_link cliente_lugar_responsable_path(@cliente,@lugar,responsable) %></td>
       <% end %>
     </tbody>
   </table>
