--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -47,6 +47,15 @@
 		  
 	  <div class="col-md-6 column">
 			  <div class="form-group">
+				  <%= f.label " ", :class => "col-sm-4 control-label" %>
+				  <div class="col-sm-6">
+					  <%= radio_button_tag(:aa, class: "form-control") %>
+					  <%= label_tag(:proyecto, "Proyecto") %>
+					  <%= radio_button_tag(:aa, class: "form-control") %>
+					  <%= label_tag(:modulo, "Modulo") %>
+				  </div>
+			  </div>
+			  <div class="form-group">
 				  <%= f.label :proyecto, :class => "col-sm-4 control-label" %>
 				  <div class="col-sm-6">
 					  <%= f.collection_select :proyecto_id, Proyecto.order(:nombre), :id, :nombre,{}, class: "form-control" %>
