--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -33,7 +33,7 @@
 			  <div class="form-group">
 				  <%= f.label :fecha_registro, :class => "col-sm-4 control-label" %>
 				  <div class="col-sm-6">
-					  <%= f.date_select :fecha_registro, :class => "form-control" %>
+					  <%= f.datetime_select :fecha_registro, :class => "form-control" %>
 				  </div>
 			  </div>
 			  <div class="form-group">
