--- a/app/views/modulos/show.html.erb
+++ b/app/views/modulos/show.html.erb
@@ -17,5 +17,6 @@
   <dt>Descripcion:</dt>
   <dd><%= @modulo.descripcion %></dd>
 
-
+  <dt>Cliente:</dt>
+  <dd><%= @modulo.cliente.nombre %></dd>
 </dl>
