--- a/app/views/tareas/index.html.erb
+++ b/app/views/tareas/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="page-header">
-  <%= link_to new_tarea_path, :class => 'btn btn-primary' do %>
+	<%= link_to new_tarea_path, "data-no-turbolink" => true,  :class => 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-plus"></span>
     Nueva Tarea
   <% end %>
