--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 	<div class="collapse navbar-collapse navbar-ex1-collapse">
 		<ul class="nav navbar-nav">
 			<% if current_user %>
-				<li><%= link_to "Tareas", tareas_path %></li>
+				<li><%= link_to "Tareas", tareas_path, "data-no-turbolink" => true %></li>
 				<li><%= link_to "Proyectos", proyectos_path %></li>
 				<li><%= link_to "Modulos", modulos_path %></li>
 
