--- a/app/views/responsables/_form.html.erb
+++ b/app/views/responsables/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for([@cliente,@lugar,@responsable], :html => { :class => "form-horizontal" }) do |f| %>
+<%= form_for([@cliente, @responsable], :html => { :class => "form-horizontal" }) do |f| %>
   <% if @responsable.errors.any? %>
     <div class="alert alert-danger alert-dismissable">
       <button type="button" class="close" data-dismiss="alert" aria-hidden="true">&times;</button>
