--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -73,13 +73,13 @@
 			  <div class="form-group">
 				  <%= f.label "Responsable Sistema", :class => "col-sm-4 control-label" %>
 				  <div class="col-sm-6">
-					  <%= f.grouped_collection_select(:responsable_sistema_id, Lugar.order(:nombre), :responsables, :nombre, :id, :nombre,{include_blank: true}, class: "form-control") %>
+					  <%= f.grouped_collection_select(:responsable_sistema_id, Cliente.order(:nombre), :responsables, :nombre, :id, :nombre,{include_blank: true}, class: "form-control") %>
 				  </div>
 			  </div>
 			  <div class="form-group">
 				  <%= f.label "Responsable Planta", :class => "col-sm-4 control-label" %>
 				  <div class="col-sm-6">
-					  <%= f.grouped_collection_select(:responsable_planta_id, Lugar.order(:nombre), :responsables, :nombre, :id, :nombre,{include_blank: true}, class: "form-control") %>
+					  <%= f.grouped_collection_select(:responsable_planta_id, Cliente.order(:nombre), :responsables, :nombre, :id, :nombre,{include_blank: true}, class: "form-control") %>
 				  </div>
 			  </div>
 		  </div>
