--- a/app/views/reportes/index.html.erb
+++ b/app/views/reportes/index.html.erb
@@ -1,15 +1,17 @@
 <h1>Listado de tareas</h1>
 
+<%= content_tag :h3, "Todas las Tareas" %>
+
 <%= form_tag reportes_path, method: 'get' do %>
 	<p>
 		<%= text_field_tag :search, params[:search] %>
 		<%= submit_tag "Buscar", name: nil %>
-		</p>
-	<% end %>
+	</p>
+<% end %>
 	<p>
 	  Download:
 	  <%= link_to "Excel", reportes_path(format: "xls") %> 
-	  </p>
+	</p>
 
 <div class="table-responsive">
   <table class="table table-striped table-hover">
@@ -18,6 +20,7 @@
             <th><%= ordenable "user_id", "Desarrollador" %></th>
             <th><%= ordenable "proyecto_id", "Proyecto" %></th>
             <th><%= ordenable "modulo_id", "Modulo" %></th>
+            <th><%= ordenable "otro_id", "Otros" %></th>
             <th><%= ordenable "hh", "HH" %></th>
             <th><%= ordenable "fecha_registro", "Fecha Registro" %></th>
 	    <th>Acciones</th>
@@ -26,13 +29,19 @@
     </thead>
 
     <tbody>
-      <%= content_tag_for(:tr, @tareas) do |tarea| %>
+      <%= content_tag_for(:tr, @tareas_listado) do |tarea| %>
             <td><%= tarea.user.email %></td>
-	      <% unless tarea.proyecto %>
+	      <% if tarea.proyecto.blank? and tarea.otro.blank? %>
 		      <td></td>
 		      <td><%= tarea.modulo.nombre.humanize %></td>
+		      <td></td>
+	      <% elsif tarea.proyecto.blank? and tarea.modulo.blank? %>
+			      <td></td>
+		      	      <td></td>
+			      <td><%= tarea.otro.nombre.humanize %></td>
 	      <% else %>
 		      <td><%= tarea.proyecto.nombre.humanize %></td>
+	              <td></td>
 	              <td></td>
 	      <% end  %>
             <td><%= tarea.hh %></td>
@@ -42,4 +51,51 @@
     </tbody>
   </table>
 </div>
-<%= will_paginate @tareas %>
+
+<%= content_tag :h2, "Tareas segun Mes" %>
+
+
+<% @tareas_mes.keys.sort.each do |mes| %>
+	<h3><%= mes.strftime("%B %Y") %></h3>
+	<%  for tareas in @tareas_mes[mes] %>
+		<p><%= tareas.nombre %> registrada en <%= tareas.fecha_registro %></p>
+	<% end  %>
+<% end  %>
+
+<%= content_tag :h2, "Tareas segun Desarrollador" %>
+
+
+<% @tareas_d.keys.sort.each do |desarrollador| %>
+	<h2><%= desarrollador %></h2>
+	<%  for tareas in @tareas_d[desarrollador] %>
+		<p><%= tareas.nombre %> registrada en <%= tareas.fecha_registro %></p>
+	<% end  %>
+<% end  %>
+
+
+<%= content_tag :h2, "Tareas segun Proyecto" %>
+
+<% @tareas_p.each do |proyecto, tareas| %>
+	<h2><%= proyecto %></h2>
+	<%  tareas.each do |tarea| %>
+		<p><%= tarea.nombre %> registrada en <%= tarea.fecha_registro %></p>
+	<% end  %>
+<% end  %>
+
+<%= content_tag :h2, "Tareas segun Modulo" %>
+
+<% @tareas_m.each do |modulo, tareas| %>
+	<h2><%= modulo %></h2>
+		<%  tareas.each do |tarea| %>
+			<p><%= tarea.nombre %> registrada en <%= tarea.fecha_registro %></p>
+		<% end %>
+<% end  %>
+
+<%= content_tag :h2, "Tareas segun Otros" %>
+
+<% @tareas_o.each do |otro, tareas| %>
+	<h2><%= otro %></h2>
+		<%  tareas.each do |tarea| %>
+			<p><%= tarea.nombre %> registrada en <%= tarea.fecha_registro %></p>
+		<% end %>
+<% end  %>
