--- a/app/views/tareas/index.html.erb
+++ b/app/views/tareas/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="page-header">
-	<%= link_to new_tarea_path, "data-no-turbolink" => true,  :class => 'btn btn-primary' do %>
+	<%= link_to new_tarea_path, "data-no-turbolink" => true,  :class => 'btn btn-primary btn-lg' do %>
     <span class="glyphicon glyphicon-plus"></span>
     Nueva Tarea
   <% end %>
@@ -18,9 +18,11 @@
   <table class="table table-striped table-hover">
     <thead>
       <tr>
+	    <th><%= ordenable "cliente" %></th>
 	    <th><%= ordenable "nombre" %></th>
 	    <th><%= ordenable "proyecto_id" %></th>
-	    <th>Modulo</th>
+	    <th><%= ordenable "modulo_id" %></th>
+	    <th><%= ordenable "otro_id" %></th>
 	    <th><%= ordenable "hh" %></th>
 	    <th><%= ordenable "fecha_registro" %></th>
 	    <th>Acciones</th>
@@ -31,17 +33,24 @@
 
     <tbody>
       <%= content_tag_for(:tr, @tareas) do |tarea| %>
-	      <td><%= tarea.nombre %></td>
-	      <% unless tarea.proyecto %>
+	      <td><%= tarea.cliente.nombre.humanize %></td>
+	      <td><%= truncate(tarea.nombre, length: 20) %></td>
+	      <% if tarea.proyecto.blank? and tarea.otro.blank? %>
 		      <td></td>
 		      <td><%= tarea.modulo.nombre.humanize %></td>
+		      <td></td>
+	      <% elsif tarea.proyecto.blank? and tarea.modulo.blank? %>
+			      <td></td>
+		      	      <td></td>
+			      <td><%= tarea.otro.nombre.humanize %></td>
 	      <% else %>
 		      <td><%= tarea.proyecto.nombre.humanize %></td>
+	              <td></td>
 	              <td></td>
 	      <% end  %>
             <td><%= tarea.hh %></td>
             <td><%= tarea.fecha_registro %></td>
-	    <td><%= link_to "Copiar", class: "btn btn-primary btn-sm" %> </td>
+	    <td><%= link_to "Copiar",{} , class: "btn btn-success btn-sm" %> </td>
 	    <td><%= detalles_link tarea %></td>
 	    <td><%= delete_link tarea_path(tarea) %></td>
       <% end %>
