--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,7 @@
  *
  *= require_self
  *= require bootstrap
+ *= require bootstrap-datepicker
  *= require dataTables/jquery.dataTables
  *= require dataTables/jquery.dataTables.bootstrap3
  *= require_tree .
