--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,12 +38,12 @@
 					<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">Listados<b class="caret"></b></a>
 					<ul class="dropdown-menu">
-						<li><%= link_to "Todas", reportes_path  %></li>
-						<li><%= link_to "datatables", listados1_path, "data-no-turbolink" => true  %></li>
-						<li><%= link_to "Segun Desarrollador", reportes_path  %></li>
-						<li><%= link_to "Segun Proyecto", reportes_path  %></li>
-						<li><%= link_to "Segun Modulo", reportes_path  %></li>
-						<li><%= link_to "Segun Otros", reportes_path  %></li>
+						<li><%= link_to "Todas", listados1_path, "data-no-turbolink" => true %></li>
+						<li><%= link_to "Mensual", listados2_path  %></li>
+						<li><%= link_to "Segun Desarrollador", listados3_path %></li>
+						<li><%= link_to "Segun Proyecto", listados4_path  %></li>
+						<li><%= link_to "Segun Modulo", listados5_path  %></li>
+						<li><%= link_to "Segun Otros", listados6_path  %></li>
 					</ul>
 					</li>
 
