--- a/app/views/listados1/index.html.erb
+++ b/app/views/listados1/index.html.erb
@@ -1,21 +1,28 @@
+<%= javascript_include_tag params[:controller] %>
+
 <div class="table-responsive">
   <table id="listado1" class="table table-striped table-hover">
     <thead>
       <tr>
+            <th>Cliente</th>
             <th>Desarrollador</th>
+            <th>Tarea</th>
             <th>Proyecto</th>
             <th>Modulo</th>
             <th>Otro</th>
             <th>HH</th>
             <th>Fecha Registro</th>
 	    <th>Acciones</th>
+	    <th></th>
       </tr>
     </thead>
 
     <tbody>
     <% @tareas_listado1.each do |tarea| %>
 	    <tr>
+            <td><%= tarea.cliente.nombre %></td>
             <td><%= tarea.user.usuario %></td>
+            <td><%= truncate(tarea.nombre, length: 25) %></td>
 	      <% if tarea.proyecto.blank? and tarea.otro.blank? %>
 		      <td></td>
 		      <td><%= tarea.modulo.nombre.humanize %></td>
@@ -32,6 +39,7 @@
             <td><%= tarea.hh %></td>
             <td><%= tarea.fecha_registro %></td>
 	    <td><%= detalles_link tarea %></td>
+	    <td><%= delete_link tarea_path(tarea) %></td>
 	    </tr>
       <% end %>
     </tbody>
