--- a/app/views/tareas/_form.html.erb
+++ b/app/views/tareas/_form.html.erb
@@ -1,3 +1,6 @@
+
+<%= javascript_include_tag params[:controller] %>
+
 <%= form_for(@tarea, :html => { :class => "form-horizontal" }) do |f| %>
   <% if @tarea.errors.any? %>
     <div id="error_explanation">
@@ -77,7 +80,7 @@
 			  <div class="form-group">
 				  <%= f.label "Fecha Tarea", :class => "col-sm-4 control-label" %>
 				  <div class="col-sm-6">
-					  <%= f.date_select :fecha_registro, :class => "form-control" %>
+					  <%= f.text_field :fecha_registro, :value => Date.today ,:id => "datepicker1", :class => "form-control" %>
 				  </div>
 			  </div>
 			  <div class="form-group">
