--- a/app/views/tareas/index.html.erb
+++ b/app/views/tareas/index.html.erb
@@ -1,4 +1,6 @@
 
+<%= javascript_include_tag params[:controller] %>
+
 <div class="page-header">
 	<%= link_to new_tarea_path, "data-no-turbolink" => true,  :class => 'btn btn-primary btn-lg' do %>
     <span class="glyphicon glyphicon-plus"></span>
@@ -7,24 +9,18 @@
   <h1>Listado de tareas</h1>
 </div>
 
-<%= form_tag tareas_path, method: 'get' do %>
-	<p>
-		<%= text_field_tag :search, params[:search] %>
-		<%= submit_tag "Buscar", name: nil %>
-		</p>
-<% end %>
 
 <div class="table-responsive">
-  <table class="table table-striped table-hover">
+  <table class="table table-striped table-hover" id="tareas_usuario">
     <thead>
       <tr>
-	    <th><%= ordenable "cliente" %></th>
-	    <th><%= ordenable "nombre" %></th>
-	    <th><%= ordenable "proyecto_id" %></th>
-	    <th><%= ordenable "modulo_id" %></th>
-	    <th><%= ordenable "otro_id" %></th>
-	    <th><%= ordenable "hh" %></th>
-	    <th><%= ordenable "fecha_registro" %></th>
+	    <th>Fecha Registro</th>
+	    <th>Cliente</th>
+	    <th>Nombre Tarea</th>
+	    <th>Proyecto</th>
+	    <th>Modulo</th>
+	    <th>Otro</th>
+	    <th>HH</th>
 	    <th>Acciones</th>
 	    <th></th>
 	    <th></th>
@@ -33,6 +29,7 @@
 
     <tbody>
       <%= content_tag_for(:tr, @tareas) do |tarea| %>
+            <td><%= tarea.fecha_registro %></td>
 	      <td><%= tarea.cliente.nombre.humanize %></td>
 	      <td><%= truncate(tarea.nombre, length: 20) %></td>
 	      <% if tarea.proyecto.blank? and tarea.otro.blank? %>
@@ -49,7 +46,6 @@
 	              <td></td>
 	      <% end  %>
             <td><%= tarea.hh %></td>
-            <td><%= tarea.fecha_registro %></td>
 	    <td><%= link_to "Copiar",{} , class: "btn btn-success btn-sm" %> </td>
 	    <td><%= detalles_link tarea %></td>
 	    <td><%= delete_link tarea_path(tarea) %></td>
@@ -58,4 +54,3 @@
   </table>
 </div>
 
-<%= will_paginate @tareas %>
